--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ lib-cov
 
 # Coverage directory used by tools like istanbul
 coverage
+reports
 *.lcov
 
 # nyc test coverage
@@ -102,3 +103,4 @@ dist
 
 # TernJS port file
 .tern-port
+/package-lock.json
